<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/idView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/dateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_label"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/startTimeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_time_label"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/endTimeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_time_label"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/distanceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance_label"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/speedView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speed_label"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>